[package]
name = "stack-overflow-client"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
keywords = ["stack-overflow", "api", "client", "stack-exchange"]
repository = "https://github.com/camerondurham/stack-overflow-client"
readme = "README.md"
description = "An unofficial client for the Stack Exchange API"
exclude = [
    "api-examples/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# oauth2 = "4.3.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
